uing/rawui.nim


proc newCheckbox*(text: cstring): ptr Checkbox {.cdecl, importc: "uiNewCheckbox",
    libui.}

type
  Entry* = object of Control

template entry*(this: untyped): untyped =
  (cast[ptr Entry]((this)))


proc entryText*(e: ptr Entry): cstring {.cdecl, importc: "uiEntryText", libui.}

proc entrySetText*(e: ptr Entry; text: cstring) {.cdecl, importc: "uiEntrySetText",
    libui.}

proc entryOnChanged*(e: ptr Entry;
                    f: proc (sender: ptr Entry; senderData: pointer) {.cdecl.};
                    data: pointer) {.cdecl, importc: "uiEntryOnChanged",
                                   libui.}

proc entryReadOnly*(e: ptr Entry): cint {.cdecl, importc: "uiEntryReadOnly",
                                     libui.}

proc entrySetReadOnly*(e: ptr Entry; readonly: cint) {.cdecl,
    importc: "uiEntrySetReadOnly", libui.}

proc newEntry*(): ptr Entry {.cdecl, importc: "uiNewEntry", libui.}

proc newPasswordEntry*(): ptr Entry {.cdecl, importc: "uiNewPasswordEntry",
                                  libui.}

proc newSearchEntry*(): ptr Entry {.cdecl, importc: "uiNewSearchEntry", libui.}

type
  Label* = object of Control

template label*(this: untyped): untyped =
  (cast[ptr Label]((this)))


proc labelText*(l: ptr Label): cstring {.cdecl, importc: "uiLabelText", libui.}

proc labelSetText*(l: ptr Label; text: cstring) {.cdecl, importc: "uiLabelSetText",
    libui.}

proc newLabel*(text: cstring): ptr Label {.cdecl, importc: "uiNewLabel", libui.}

type
  Tab* = object of Control

template tab*(this: untyped): untyped =
  (cast[ptr Tab]((this)))


proc tabAppend*(t: ptr Tab; name: cstring; c: ptr Control) {.cdecl,
    importc: "uiTabAppend", libui.}

proc tabInsertAt*(t: ptr Tab; name: cstring; index: cint; c: ptr Control) {.cdecl,
    importc: "uiTabInsertAt", libui.}

proc tabDelete*(t: ptr Tab; index: cint) {.cdecl, importc: "uiTabDelete", libui.}

proc tabNumPages*(t: ptr Tab): cint {.cdecl, importc: "uiTabNumPages", libui.}

proc tabMargined*(t: ptr Tab; index: cint): cint {.cdecl, importc: "uiTabMargined",
    libui.}

proc tabSetMargined*(t: ptr Tab; index: cint; margined: cint) {.cdecl,
    importc: "uiTabSetMargined", libui.}

proc newTab*(): ptr Tab {.cdecl, importc: "uiNewTab", libui.}

type
  Group* = object of Control

template group*(this: untyped): untyped =
  (cast[ptr Group]((this)))


proc groupTitle*(g: ptr Group): cstring {.cdecl, importc: "uiGroupTitle",
                                     libui.}

proc groupSetTitle*(g: ptr Group; title: cstring) {.cdecl, importc: "uiGroupSetTitle",
    libui.}

proc groupSetChild*(g: ptr Group; c: ptr Control) {.cdecl, importc: "uiGroupSetChild",
    libui.}

proc groupMargined*(g: ptr Group): cint {.cdecl, importc: "uiGroupMargined",
                                     libui.}

proc groupSetMargined*(g: ptr Group; margined: cint) {.cdecl,
    importc: "uiGroupSetMargined", libui.}

proc newGroup*(title: cstring): ptr Group {.cdecl, importc: "uiNewGroup",
                                       libui.}

type
  Spinbox* = object of Control

template spinbox*(this: untyped): untyped =
  (cast[ptr Spinbox]((this)))


proc spinboxValue*(s: ptr Spinbox): cint {.cdecl, importc: "uiSpinboxValue",
                                      libui.}

proc spinboxSetValue*(s: ptr Spinbox; value: cint) {.cdecl,
    importc: "uiSpinboxSetValue", libui.}

proc spinboxOnChanged*(s: ptr Spinbox; f: proc (sender: ptr Spinbox; senderData: pointer) {.
    cdecl.}; data: pointer) {.cdecl, importc: "uiSpinboxOnChanged", libui.}

proc newSpinbox*(min: cint; max: cint): ptr Spinbox {.cdecl, importc: "uiNewSpinbox",
    libui.}

type
  Slider* = object of Control

template slider*(this: untyped): untyped =
  (cast[ptr Slider]((this)))


proc sliderValue*(s: ptr Slider): cint {.cdecl, importc: "uiSliderValue",
                                    libui.}

proc sliderSetValue*(s: ptr Slider; value: cint) {.cdecl, importc: "uiSliderSetValue",
    libui.}

proc sliderHasToolTip*(s: ptr Slider): cint {.cdecl, importc: "uiSliderHasToolTip",
    libui.}

proc sliderSetHasToolTip*(s: ptr Slider; hasToolTip: cint) {.cdecl,
    importc: "uiSliderSetHasToolTip", libui.}

proc sliderOnChanged*(s: ptr Slider; f: proc (sender: ptr Slider; senderData: pointer) {.
    cdecl.}; data: pointer) {.cdecl, importc: "uiSliderOnChanged", libui.}

proc sliderOnReleased*(s: ptr Slider; f: proc (sender: ptr Slider; senderData: pointer) {.
    cdecl.}; data: pointer) {.cdecl, importc: "uiSliderOnReleased", libui.}

proc sliderSetRange*(s: ptr Slider; min: cint; max: cint) {.cdecl,
    importc: "uiSliderSetRange", libui.}

proc newSlider*(min: cint; max: cint): ptr Slider {.cdecl, importc: "uiNewSlider",
    libui.}

type
  ProgressBar* = object of Control

template progressBar*(this: untyped): untyped =
  (cast[ptr ProgressBar]((this)))


proc progressBarValue*(p: ptr ProgressBar): cint {.cdecl,
    importc: "uiProgressBarValue", libui.}

proc progressBarSetValue*(p: ptr ProgressBar; n: cint) {.cdecl,
    importc: "uiProgressBarSetValue", libui.}

proc newProgressBar*(): ptr ProgressBar {.cdecl, importc: "uiNewProgressBar",
                                      libui.}

type
  Separator* = object of Control

template separator*(this: untyped): untyped =
  (cast[ptr Separator]((this)))


proc newHorizontalSeparator*(): ptr Separator {.cdecl,
    importc: "uiNewHorizontalSeparator", libui.}

proc newVerticalSeparator*(): ptr Separator {.cdecl,
    importc: "uiNewVerticalSeparator", libui.}

type
  Combobox* = object of Control

template combobox*(this: untyped): untyped =
  (cast[ptr Combobox]((this)))


proc comboboxAppend*(c: ptr Combobox; text: cstring) {.cdecl,
    importc: "uiComboboxAppend", libui.}

proc comboboxInsertAt*(c: ptr Combobox; index: cint; text: cstring) {.cdecl,
    importc: "uiComboboxInsertAt", libui.}

proc comboboxDelete*(c: ptr Combobox; index: cint) {.cdecl,
    importc: "uiComboboxDelete", libui.}

proc comboboxClear*(c: ptr Combobox) {.cdecl, importc: "uiComboboxClear",
                                   libui.}

proc comboboxNumItems*(c: ptr Combobox): cint {.cdecl, importc: "uiComboboxNumItems",
    libui.}

proc comboboxSelected*(c: ptr Combobox): cint {.cdecl, importc: "uiComboboxSelected",
    libui.}

proc comboboxSetSelected*(c: ptr Combobox; index: cint) {.cdecl,
    importc: "uiComboboxSetSelected", libui.}

proc comboboxOnSelected*(c: ptr Combobox; f: proc (sender: ptr Combobox;
    senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiComboboxOnSelected", libui.}

proc newCombobox*(): ptr Combobox {.cdecl, importc: "uiNewCombobox", libui.}

type
  EditableCombobox* = object of Control

template editableCombobox*(this: untyped): untyped =
  (cast[ptr EditableCombobox]((this)))


proc editableComboboxAppend*(c: ptr EditableCombobox; text: cstring) {.cdecl,
    importc: "uiEditableComboboxAppend", libui.}

proc editableComboboxText*(c: ptr EditableCombobox): cstring {.cdecl,
    importc: "uiEditableComboboxText", libui.}

proc editableComboboxSetText*(c: ptr EditableCombobox; text: cstring) {.cdecl,
    importc: "uiEditableComboboxSetText", libui.}

proc editableComboboxOnChanged*(c: ptr EditableCombobox; f: proc (
    sender: ptr EditableCombobox; senderData: pointer) {.cdecl.}; data: pointer) {.
    cdecl, importc: "uiEditableComboboxOnChanged", libui.}

proc newEditableCombobox*(): ptr EditableCombobox {.cdecl,
    importc: "uiNewEditableCombobox", libui.}

type
  RadioButtons* = object of Control

template radioButtons*(this: untyped): untyped =
  (cast[ptr RadioButtons]((this)))


proc radioButtonsAppend*(r: ptr RadioButtons; text: cstring) {.cdecl,
    importc: "uiRadioButtonsAppend", libui.}

proc radioButtonsSelected*(r: ptr RadioButtons): cint {.cdecl,
    importc: "uiRadioButtonsSelected", libui.}

proc radioButtonsSetSelected*(r: ptr RadioButtons; index: cint) {.cdecl,
    importc: "uiRadioButtonsSetSelected", libui.}

proc radioButtonsOnSelected*(r: ptr RadioButtons; f: proc (sender: ptr RadioButtons;
    senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiRadioButtonsOnSelected", libui.}

proc newRadioButtons*(): ptr RadioButtons {.cdecl, importc: "uiNewRadioButtons",
                                        libui.}

type
  Tm* {.importc: "struct tm", header: "time.h", bycopy.} = object 
    tm_sec*   : cint ## seconds [0,61]
    tm_min*   : cint ## minutes [0,59]
    tm_hour*  : cint ## hour [0,23]
    tm_mday*  : cint ## day of month [1,31]
    tm_mon*   : cint ## month of year [0,11]
    tm_year*  : cint ## years since 1900
    tm_wday*  : cint ## day of week [0,6] (Sunday = 0)
    tm_yday*  : cint ## day of year [0,365]
    tm_isdst* : cint ## daylight savings flag

  DateTimePicker* = object of Control

template dateTimePicker*(this: untyped): untyped =
  (cast[ptr DateTimePicker]((this)))


proc dateTimePickerTime*(d: ptr DateTimePicker; time: ptr Tm) {.cdecl,
    importc: "uiDateTimePickerTime", libui.}

proc dateTimePickerSetTime*(d: ptr DateTimePicker; time: ptr Tm) {.cdecl,
    importc: "uiDateTimePickerSetTime", libui.}

proc dateTimePickerOnChanged*(d: ptr DateTimePicker; f: proc (
    sender: ptr DateTimePicker; senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiDateTimePickerOnChanged", libui.}

proc newDateTimePicker*(): ptr DateTimePicker {.cdecl,
    importc: "uiNewDateTimePicker", libui.}

proc newDatePicker*(): ptr DateTimePicker {.cdecl, importc: "uiNewDatePicker",
                                        libui.}

proc newTimePicker*(): ptr DateTimePicker {.cdecl, importc: "uiNewTimePicker",
                                        libui.}

type
  MultilineEntry* = object of Control

template multilineEntry*(this: untyped): untyped =
  (cast[ptr MultilineEntry]((this)))


proc multilineEntryText*(e: ptr MultilineEntry): cstring {.cdecl,
    importc: "uiMultilineEntryText", libui.}

proc multilineEntrySetText*(e: ptr MultilineEntry; text: cstring) {.cdecl,
    importc: "uiMultilineEntrySetText", libui.}

proc multilineEntryAppend*(e: ptr MultilineEntry; text: cstring) {.cdecl,
    importc: "uiMultilineEntryAppend", libui.}

proc multilineEntryOnChanged*(e: ptr MultilineEntry; f: proc (
    sender: ptr MultilineEntry; senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiMultilineEntryOnChanged", libui.}

proc multilineEntryReadOnly*(e: ptr MultilineEntry): cint {.cdecl,
    importc: "uiMultilineEntryReadOnly", libui.}

proc multilineEntrySetReadOnly*(e: ptr MultilineEntry; readonly: cint) {.cdecl,
    importc: "uiMultilineEntrySetReadOnly", libui.}

proc newMultilineEntry*(): ptr MultilineEntry {.cdecl,
    importc: "uiNewMultilineEntry", libui.}

proc newNonWrappingMultilineEntry*(): ptr MultilineEntry {.cdecl,
    importc: "uiNewNonWrappingMultilineEntry", libui.}

type
  MenuItem* = object of Control

template menuItem*(this: untyped): untyped =
  (cast[ptr MenuItem]((this)))


proc menuItemEnable*(m: ptr MenuItem) {.cdecl, importc: "uiMenuItemEnable",
                                    libui.}

proc menuItemDisable*(m: ptr MenuItem) {.cdecl, importc: "uiMenuItemDisable",
                                     libui.}

proc menuItemOnClicked*(m: ptr MenuItem; f: proc (sender: ptr MenuItem;
    window: ptr Window; senderData: pointer) {.cdecl.}; data: pointer) {.cdecl,
    importc: "uiMenuItemOnClicked", libui.}

proc menuItemChecked*(m: ptr MenuItem): cint {.cdecl, importc: "uiMenuItemChecked",
    libui.}

proc menuItemSetChecked*(m: ptr MenuItem; checked: cint) {.cdecl,
    importc: "uiMenuItemSetChecked", libui.}

type
  Menu* = object of Control

template menu*(this: untyped): untyped =
  (cast[ptr Menu]((this)))


proc menuAppendItem*(m: ptr Menu; name: cstring): ptr MenuItem {.cdecl,
    importc: "uiMenuAppendItem", libui.}

proc menuAppendCheckItem*(m: ptr Menu; name: cstring): ptr MenuItem {.cdecl,
    importc: "uiMenuAppendCheckItem", libui.}
